--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server/app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
+    "react": "^18.2.0",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1"
   }
