--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "sanitize": "^2.1.2",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
+    "winston": "^3.10.0",
     "xss-clean": "^0.1.4"
   }
 }
